force-app/main/default/objects/Release__c/fields/Executor_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Executor_Deploy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executor do Deploy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>