force-app/main/default/objects/Release__c/fields/Nome_Pacote__c.field-meta.xml
<CustomField>
    <fullName>Nome_Pacote__c</fullName>
    <label>Nome do Pacote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>