force-app/main/default/objects/Release__c/fields/PlannedDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedDate__c</fullName>
    <inlineHelpText>This field is mandatory if this is not a Release Backlog.</inlineHelpText>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>