force-app/main/default/objects/Release__c/fields/PointsDayComplete__c.field-meta.xml
<CustomField>
    <fullName>PointsDayComplete__c</fullName>
    <formula>( ReleaseEstimatedPoints__c -  ReleaseDevelopedPoints__c ) / ( PlannedDate__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points by Day to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>