force-app/main/default/objects/Release__c/fields/Pos_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Pos_Deploy__c</fullName>
    <label>Pós Deploy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>