force-app/main/default/objects/Release__c/fields/Pre_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deploy__c</fullName>
    <label>Pré Deploy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>