force-app/main/default/objects/Release__c/fields/ReleaseBacklog__c.field-meta.xml
<CustomField>
    <fullName>ReleaseBacklog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this release is for the Product Backlog.</description>
    <inlineHelpText>Indicates that this release is for the Product Backlog.</inlineHelpText>
    <label>Release Backlog</label>
    <type>Checkbox</type>
</CustomField>