force-app/main/default/objects/Release__c/fields/ReleaseDevelopedPoints__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDevelopedPoints__c</fullName>
    <label>Release Developed Points</label>
    <summarizedField>Sprint__c.SprintDevelopedPoints__c</summarizedField>
    <summaryFilterItems>
        <field>Sprint__c.ProductBacklog__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Sprint__c.PlannedRelease__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>