force-app/main/default/objects/Release__c/fields/Tipo_Pacote__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pacote__c</fullName>
    <label>Tipo do Pacote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Set</fullName>
            </value>
            <value>
                <fullName>Ant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>