force-app/main/default/objects/Release__c/validationRules/PlannedDateMandatoryNotReleaseBacklog.validationRule-meta.xml
<ValidationRule>
    <fullName>PlannedDateMandatoryNotReleaseBacklog</fullName>
    <active>true</active>
    <description>If the Release is not a Backlog release, it&apos;s necessary to inform the Planned Date.</description>
    <errorConditionFormula>AND( 
ISBLANK(PlannedDate__c),
NOT(ReleaseBacklog__c)
)</errorConditionFormula>
    <errorDisplayField>PlannedDate__c</errorDisplayField>
    <errorMessage>Please inform the Planned Date for this Release.</errorMessage>
</ValidationRule>