force-app/main/default/objects/Release__c/listViews/Configura_o_Inicial_Release_Backlog.listView-meta.xml
<ListView>
    <fullName>Configura_o_Inicial_Release_Backlog</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReleaseBacklog__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>(Configuração Inicial) Release Backlog</label>
</ListView>