force-app/main/default/objects/Release__c/listViews/Releases.listView-meta.xml
<ListView>
    <fullName>Releases</fullName>
    <columns>NAME</columns>
    <columns>PlannedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReleaseBacklog__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Próximos Releases</label>
</ListView>